Add colors and raw String values
Add some Color's value and Raw String's Value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="cvQuizzDetailDescription">Description :</string>
     <string name="cvQuizzDetailTo">De :</string>
     <string name="cvQuizzDetailThe">, Le :</string>
+    <string name="cvQuizzModif">MODIFIER</string>
 </resources>
