--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
     <string name="btn_exit_quizz">Quitter</string>
     <string name="btn_joker_quizz">Joker</string>
     <string name="btn_valid_quizz">Valider</string>
+    <string name="congratulation">Félicitation !!!</string>
 </resources>
